--- a/res/layout/activity_compare_price_detail.xml
+++ b/res/layout/activity_compare_price_detail.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,14 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bg_img"
-    tools:context=".ComparePriceDetailActivity" >
+    tools:context=".ComparePriceDetailActivity"
+    android:orientation="vertical" >
 
-    
 	<LinearLayout
         android:id="@+id/linearLayoutTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:orientation="horizontal" >
 
         <TextView
@@ -67,7 +66,6 @@
         android:id="@+id/linearLayoutTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:orientation="horizontal"
         android:layout_marginTop="25dip" >
 
@@ -122,7 +120,6 @@
         
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_below="@id/linearLayoutTitle"
         android:layout_marginTop="15dip"
         >
         <TextView android:id="@+id/item1"
@@ -183,14 +180,12 @@
     <!-- List Divider -->
     <View android:layout_width="fill_parent"
         android:layout_height="1dip"
-        android:layout_below="@id/header"
         android:background="?android:attr/listDivider" />
  
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/header"
         >
 
         <ListView
@@ -200,4 +195,4 @@
         </ListView>
 
     </LinearLayout>       
-</RelativeLayout>
+</LinearLayout>
