--- a/res/layout/activity_select_shop.xml
+++ b/res/layout/activity_select_shop.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -6,12 +6,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SelectShopActivity" >
+    tools:context=".SelectShopActivity"
+    android:orientation="vertical" >
 
     <TextView
 	    android:id="@+id/textViewShopTitle"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
+	    android:layout_gravity="center"
 	    android:text="매장을 선택하세요"
 	    android:layout_centerHorizontal="true"
 	    android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -25,5 +27,5 @@
         
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
    
