--- a/res/layout/activity_compare_price.xml
+++ b/res/layout/activity_compare_price.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bg_img"
-    tools:context=".ComparePriceActivity" >
+    tools:context=".ComparePriceActivity"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/linearLayoutTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:orientation="horizontal" >
 
         <TextView
@@ -71,8 +71,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayoutTitle"
         android:orientation="horizontal" >
 
         <TextView
@@ -141,15 +139,14 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.45"
+            android:layout_weight="0.4"
             android:text="지역"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#ffffff"
@@ -179,85 +176,89 @@
 	        
     </LinearLayout>
     
-    <!-- Header -->
-    <LinearLayout android:id="@+id/header"
-        
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:layout_below="@id/linearLayout3"
-        >
-        <TextView android:id="@+id/item1"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="0.7"
-            android:text="바코드"
-            android:textColor="#d7d7d7"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:width="75dip"
-            android:height="20dip"
-            android:background="@drawable/gray_bar_bg"
-        />
-        <TextView android:id="@+id/item2"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:text="상품명"
-			android:textColor="#d7d7d7"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:width="75dip"
-            android:height="20dip"
-            android:background="@drawable/gray_bar_bg"
-        />
-        <TextView android:id="@+id/item3"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:text="매입가"
-            android:textColor="#d7d7d7"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:width="75dip"
-            android:height="20dip"
-            android:background="@drawable/gray_bar_bg"
-        />
-        <TextView android:id="@+id/item4"
-            android:layout_height="fill_parent"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:text="판매가"
-            android:textColor="#d7d7d7"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:gravity="center"
-            android:width="75dip"
-            android:height="20dip"
-            android:background="@drawable/gray_bar_bg"
-        />
-    </LinearLayout>
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginTop="10dp"
+	    android:orientation="vertical" >
+	
+	    <!-- Header -->
+	    <LinearLayout android:id="@+id/header"
+	        
+	        android:layout_height="wrap_content"
+	        android:layout_width="fill_parent"
+	        >
+	        <TextView android:id="@+id/item1"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="0.7"
+	            android:text="바코드"
+	            android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="75dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	        <TextView android:id="@+id/item2"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="1"
+	            android:text="상품명"
+				android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="75dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	        <TextView android:id="@+id/item3"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="1"
+	            android:text="매입가"
+	            android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="75dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	        <TextView android:id="@+id/item4"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="1"
+	            android:text="판매가"
+	            android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="75dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	    </LinearLayout>
+	
+	    <!-- List Divider -->
+	    <View android:layout_width="fill_parent"
+	        android:layout_height="1dip"
+	        android:background="?android:attr/listDivider" />
+	 
+	    <!-- ListView (grid_items) -->
+	    <LinearLayout android:id="@+id/layout"
+	        android:layout_width="match_parent"
+	        android:layout_height="fill_parent"
+	        >
+	        <ListView android:id="@+id/listviewPriceSearchList"
+	            android:layout_height="fill_parent"
+	            android:layout_width="fill_parent">
+	        </ListView>
+	    </LinearLayout>       
+		    
+	
+	</LinearLayout>
 
-    <!-- List Divider -->
-    <View android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_below="@+id/header"
-        android:background="?android:attr/listDivider" />
- 
-    <!-- ListView (grid_items) -->
-    <LinearLayout android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/header"
-        >
-        <ListView android:id="@+id/listviewPriceSearchList"
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent">
-        </ListView>
-    </LinearLayout>       
-    
-
-    
-</RelativeLayout>
+</LinearLayout>
