--- a/res/layout/activity_config.xml
+++ b/res/layout/activity_config.xml
@@ -1,47 +1,74 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/intro_bg"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
 	     <requestFocus />
 
-	    <Button
-	        android:id="@+id/buttonLogin"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentBottom="true"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginBottom="120dp"
-	        android:background="@drawable/login_btn"
-	        android:gravity="center_horizontal"
-	        android:onClick="onClickLogin" />
-
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="3"
+	    android:orientation="vertical" >
+	</LinearLayout>
+	
+	<TextView
+        android:id="@+id/textViewTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/logo"
+        android:layout_gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
+        android:layout_gravity="center"
+        android:gravity="center_vertical|right" 
+	    android:orientation="horizontal" >
+	    
 	    <TextView
-	        android:id="@+id/textViewTop"
+	        android:id="@+id/textViewID"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/editTextLoginID"
-	        android:layout_alignLeft="@+id/editTextLoginID"
-	        android:layout_marginBottom="10dp"
-	        android:background="@drawable/logo"
-	        android:gravity="center_horizontal"
-	        android:textAppearance="?android:attr/textAppearanceLarge" />
+	        android:text="ID"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textColor="#ffffff"
+	        android:textSize="20sp" />
+	    
+	    <EditText
+	        android:id="@+id/editTextLoginID"
+	        android:layout_width="210dp"
+	        android:layout_height="wrap_content"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:textColor="#000000"
+	        android:background="@drawable/intro_text_box"
+	        android:ems="20"
+	        android:inputType="text" />
 
+	</LinearLayout>
+	
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
+        android:layout_gravity="center"
+        android:gravity="center_vertical|right" 
+	    android:orientation="horizontal" >
+	
 	    <TextView
 	        android:id="@+id/textViewPW"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/editTextLoginPW"
-	        android:layout_alignBottom="@+id/editTextLoginPW"
-	        android:layout_toLeftOf="@+id/editTextLoginPW"
 	        android:gravity="center"
-	        android:layout_marginRight="10dp"
 	        android:text="PW"
 	        android:textAppearance="?android:attr/textAppearanceMedium"
 	        android:textColor="#ffffff"
@@ -49,43 +76,42 @@
 
 	    <EditText
 	        android:id="@+id/editTextLoginPW"
-	        android:layout_width="wrap_content"
+	        android:layout_width="210dp"
 	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/buttonLogin"
-	        android:layout_alignLeft="@+id/buttonLogin"
-	        android:layout_marginBottom="10dp"
 	        android:paddingLeft="10dp"
 	        android:paddingRight="10dp"
 	        android:textColor="#000000"
 	        android:background="@drawable/intro_text_box"
 	        android:ems="20"
 	        android:inputType="textPassword" />
-
-	    <TextView
-	        android:id="@+id/textViewID"
+	    
+	</LinearLayout>
+	
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
+	    android:gravity="center"
+	    android:orientation="vertical" >
+	    
+	<Button
+	        android:id="@+id/buttonLogin"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/editTextLoginID"
-	        android:layout_alignBottom="@+id/editTextLoginID"
-	        android:layout_toLeftOf="@+id/editTextLoginID"
-	        android:layout_marginRight="10dp"
-	        android:text="ID"
-	        android:textAppearance="?android:attr/textAppearanceMedium"
-	        android:textColor="#ffffff"
-	        android:textSize="20sp" />
+	        android:background="@drawable/login_btn"
+	        android:gravity="center_horizontal"
+	        android:onClick="onClickLogin" />
 
-	    <EditText
-	        android:id="@+id/editTextLoginID"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/editTextLoginPW"
-	        android:layout_alignLeft="@+id/editTextLoginPW"
-	        android:layout_marginBottom="5dp"
-	        android:paddingLeft="10dp"
-	        android:paddingRight="10dp"
-	        android:textColor="#000000"
-	        android:background="@drawable/intro_text_box"
-	        android:ems="20"
-	        android:inputType="text" />
+
+	</LinearLayout>
+	    
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="2"
+	    android:orientation="vertical" >
+	</LinearLayout>
+	    
+	    
     
-</RelativeLayout>
+</LinearLayout>
