--- a/res/layout/activity_customer_product_detail_in_news.xml
+++ b/res/layout/activity_customer_product_detail_in_news.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,14 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bg_img"
-    tools:context=".CustomerProductDetailInNewsActivity" >
+    tools:context=".CustomerProductDetailInNewsActivity"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_height="wrap_content" >
 
         <TextView
             android:id="@+id/item1"
@@ -69,15 +68,12 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dip"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/header"
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/header" >
+        android:layout_height="fill_parent">
 
         <ListView
             android:id="@+id/listviewCustomerProductDetailInNews"
@@ -87,4 +83,4 @@
         </ListView>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
