--- a/res/layout/activity_manage_customer.xml
+++ b/res/layout/activity_manage_customer.xml
@@ -1,3 +1,233 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+	android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_img"
+    tools:context=".ManageCustomerActivity"
+    android:orientation="vertical" >
+
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="0.15"
+	    android:gravity="center_vertical"
+	    android:orientation="horizontal" >
+	    
+        <TextView
+	        android:id="@+id/textView2"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="0.65"
+	        android:text="거래처 코드"
+	        android:textColor="#ffffff"
+	        android:textSize="14sp"
+	        android:textStyle="bold" />
+        
+        <EditText
+	        android:id="@+id/editTextCustomerCode"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:background="@drawable/white_text_box_small"
+	        android:ems="10"
+	        android:textColor="#000000"
+	        android:textSize="14sp" />
+        
+        
+    </LinearLayout>
+    
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="0.15"
+	    android:gravity="center_vertical"
+	    android:orientation="horizontal" >
+        
+        <TextView
+	        android:id="@+id/textView5"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="0.65"
+	        android:text="거래처 구분"
+	        android:textColor="#ffffff"
+	        android:textStyle="bold"
+	        android:textSize="14sp" />
+        
+        <Spinner
+	        android:id="@+id/spinnerCustomerCodeType"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:entries="@array/customer_code_type"
+	        android:prompt="@string/choose_customer_code_type"
+	        android:textSize="14sp" />
+        
+    </LinearLayout>
+    
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="0.15"
+	    android:gravity="center_vertical"
+	    android:orientation="horizontal" >
+        
+        <TextView
+	        android:id="@+id/textView3"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="0.65"
+	        android:text="거래처명"
+	        android:textColor="#ffffff"
+	        android:textStyle="bold"
+	        android:textSize="14sp"
+	        />
+    
+        <EditText
+	        android:id="@+id/editTextCustomerName"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:background="@drawable/white_text_box_small"
+	        android:ems="10"
+	        android:inputType="text"
+	        android:textColor="#000000"
+	        android:textSize="14sp" />
+        
+    </LinearLayout>
+        
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="0.25"
+	    android:gravity="center"
+	    android:orientation="horizontal" >
+        
+        <Button
+	        android:id="@+id/buttonCustomerRenew"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:scaleY="0.8"
+	        android:background="@drawable/replace_btn" />
+	        
+	    <Button
+	        android:id="@+id/buttonCustomerSearch"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:scaleY="0.8"
+	        android:layout_marginLeft="25dp"
+	        android:background="@drawable/basic_inquiry_btn" />
+	
+	    <Button
+	        android:id="@+id/buttonCustomerRegist"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	      	android:layout_marginLeft="25dp"
+	        android:scaleY="0.8"
+	        android:background="@drawable/basic_register_btn" />
+
+    </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/linearLayoutTitle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+	    android:layout_weight="0.08"
+        android:background="@drawable/tap_bar_bg"
+        android:gravity="center"
+        android:orientation="vertical" >
+	    
+	    <TextView
+	        android:id="@+id/textView4"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="14sp"
+	        android:text="거래처 목록"/>
+	    
+    </LinearLayout>
+
+
+     <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
+	    android:orientation="horizontal" >   
+    
+	    <LinearLayout android:id="@+id/header"
+	        android:layout_height="wrap_content"
+	        android:layout_width="fill_parent"
+	        >
+	        <TextView android:id="@+id/item1"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="0.7"
+	            android:text="코드"
+	            android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="100dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	        <TextView android:id="@+id/item2"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="1"
+	            android:text="거래처명"
+	            android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="100dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	        <TextView android:id="@+id/item3"
+	            android:layout_height="fill_parent"
+	            android:layout_width="0dip"
+	            android:layout_weight="1"
+	            android:text="구분"
+	            android:textColor="#d7d7d7"
+	            android:textStyle="bold"
+	            android:textSize="14sp"
+	            android:gravity="center"
+	            android:width="100dip"
+	            android:height="20dip"
+	            android:background="@drawable/gray_bar_bg"
+	        />
+	    </LinearLayout>
+	
+	
+	 	<View android:layout_width="fill_parent"
+	        android:layout_height="1dip"
+	        android:background="?android:attr/listDivider" />
+	 	
+	
+	    <LinearLayout android:id="@+id/layout"
+	        android:layout_width="match_parent"
+	        android:layout_height="fill_parent"
+	        >
+	        <ListView android:id="@+id/listviewCustomerList"
+	            android:layout_height="fill_parent"
+	            android:layout_width="fill_parent">
+	        </ListView>
+	    </LinearLayout>
+    
+    
+    </LinearLayout>
+     
+    
+
+</LinearLayout>
+
+
+<!-- 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -78,7 +308,7 @@
         android:prompt="@string/choose_customer_code_type"
         android:textSize="14sp" />
 
-    <!-- Header -->
+  
     <LinearLayout android:id="@+id/header"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
@@ -125,13 +355,13 @@
         />
     </LinearLayout>
 
-    <!-- List Divider -->
+
  	<View android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_below="@id/header"
         android:background="?android:attr/listDivider" />
  	
-    <!-- ListView (grid_items) -->
+
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
@@ -199,3 +429,6 @@
 
 
 </RelativeLayout>
+
+
+ -->
