--- a/res/layout/activity_manage_event.xml
+++ b/res/layout/activity_manage_event.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bg_img"
-    tools:context=".ManageEventActivity" >
+    tools:context=".ManageEventActivity"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/linearLayoutTitle"
@@ -44,7 +45,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayoutTitle"
         android:orientation="horizontal" >
     
         <TextView
@@ -75,7 +75,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout1"
         android:orientation="horizontal" >
 
         <TextView
@@ -126,17 +125,16 @@
     
 	<LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout2"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.64"
+            android:layout_weight="0.4"
             android:textColor="#ffffff"
             android:textSize="14sp"
             android:text="바코드"
@@ -146,7 +144,7 @@
             android:id="@+id/editTextBarcode"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:inputType="text"
@@ -165,7 +163,7 @@
             android:id="@+id/textView6"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.45"
+            android:layout_weight="0.3"
             android:textColor="#ffffff"
             android:textSize="14sp"
             android:text="상품명"
@@ -176,7 +174,7 @@
 	        android:id="@+id/editTextProductName"
 	        android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.48"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:inputType="text"
@@ -195,14 +193,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout3"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.64"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
             android:textSize="14sp"
             android:text="매입가"
@@ -234,7 +231,7 @@
 	        android:id="@+id/editTextSalePrice"
 	        android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:inputType="number"
@@ -249,7 +246,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout4"
         android:orientation="horizontal" >
 
         <TextView
@@ -303,7 +299,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:layout_below="@+id/linearLayout5"
         android:orientation="horizontal" >
 
        <Button
@@ -340,7 +335,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout6"
         android:background="@drawable/tap_bar_bg"
         android:gravity="center"
         android:orientation="horizontal" >
@@ -362,7 +356,6 @@
         
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_below="@id/linearLayout7"
         >
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
@@ -402,14 +395,12 @@
     <!-- List Divider -->
     <View android:layout_width="fill_parent"
         android:layout_height="1dip"
-        android:layout_below="@id/header"
         android:background="?android:attr/listDivider" />
  
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:layout_below="@+id/header"
         >
 
         <ListView
@@ -425,7 +416,6 @@
         android:id="@+id/linearLayout8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layout"
         android:orientation="horizontal"
         android:gravity="center" >
 
@@ -453,4 +443,4 @@
             android:layout_marginLeft="5dip"
             android:background="@drawable/purchase_allsave_btn" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
