--- a/res/layout/activity_manage_sales.xml
+++ b/res/layout/activity_manage_sales.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bg_img"
-    tools:context=".ManageSalesActivity" >
+    tools:context=".ManageSalesActivity"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/linearLayoutTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:orientation="horizontal" >
 
         <TextView
@@ -67,7 +67,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayoutTitle"
         android:orientation="horizontal" >
 
         <TextView
@@ -134,7 +133,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout2"
         android:orientation="horizontal" >
 
         <TextView
@@ -192,7 +190,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout3"
         android:orientation="horizontal"
         android:gravity="center" >
 
@@ -225,8 +222,6 @@
         android:id="@+id/tabhostManageSales"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout4"
         android:layout_marginTop="10dp" >
 
         <LinearLayout
@@ -387,7 +382,6 @@
 				    <LinearLayout android:id="@+id/layout2"
 				        android:layout_width="match_parent"
 				        android:layout_height="fill_parent"
-				        android:layout_below="@+id/header2"
 				        >
 				        <ListView android:id="@+id/listviewSalesListTab2"
 				            android:layout_height="fill_parent"
@@ -473,10 +467,9 @@
                     <CalendarView android:id="@+id/calendarView1"
 				            android:layout_height="180dip"
 				            android:layout_width="match_parent"
-				            android:showWeekNumber="false"
-				            			            
+				            android:showWeekNumber="false"		            
 				             >
-                        
+				        
                     </CalendarView>
 				
 				    <!-- List Divider -->
@@ -501,4 +494,4 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-</RelativeLayout>
+</LinearLayout>
