--- a/res/layout/activity_purchase_payment_status.xml
+++ b/res/layout/activity_purchase_payment_status.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +7,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/bg_img"
-    tools:context=".PurchasePaymentStatusActivity" >
+    tools:context=".PurchasePaymentStatusActivity"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/linearLayoutTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:orientation="horizontal" >
 
         <TextView
@@ -66,7 +66,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 		android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayoutTitle"
         android:orientation="horizontal" >
 
         <TextView
@@ -122,7 +121,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout2"
         android:orientation="horizontal" >
 
         <TextView
@@ -188,7 +186,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/linearLayout3"
         android:orientation="horizontal"
         android:gravity="center" >
 
@@ -220,8 +217,6 @@
         android:id="@+id/tabhostPurchasePaymentStatus"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/linearLayout4"
         android:layout_marginTop="10dp" >
 
         <LinearLayout
@@ -307,7 +302,6 @@
 				    <LinearLayout android:id="@+id/layout1"
 				        android:layout_width="match_parent"
 				        android:layout_height="fill_parent"
-				        android:layout_below="@+id/header1"
 				        >
 				        <ListView android:id="@+id/listviewPurchaseListTab1"
 				            android:layout_height="fill_parent"
@@ -393,7 +387,6 @@
 				    <LinearLayout android:id="@+id/layout2"
 				        android:layout_width="match_parent"
 				        android:layout_height="fill_parent"
-				        android:layout_below="@+id/header2"
 				        >
 				        <ListView android:id="@+id/listviewPurchaseListTab2"
 				            android:layout_height="fill_parent"
@@ -470,7 +463,6 @@
 				    <LinearLayout android:id="@+id/layout3"
 				        android:layout_width="match_parent"
 				        android:layout_height="fill_parent"
-				        android:layout_below="@+id/header3"
 				        >
 				        <ListView android:id="@+id/listviewPurchaseListTab3"
 				            android:layout_height="fill_parent"
@@ -483,4 +475,4 @@
         </LinearLayout>
     </TabHost>
 
-</RelativeLayout>
+</LinearLayout>
